[gd_scene load_steps=6 format=3 uid="uid://cl23mivb2a63y"]

[ext_resource type="Script" path="res://src/enemies/enemy_1.gd" id="1_3qghp"]
[ext_resource type="Texture2D" uid="uid://gky5rerde5kf" path="res://asstes/SPRITES/misc/turret/turret-1.png" id="1_8o0gs"]
[ext_resource type="PackedScene" uid="uid://dkwok76eo8dvf" path="res://src/enemies/enemy_explosion.tscn" id="3_nj3h4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_py4il"]
size = Vector2(9.95827, 531.474)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nsxty"]
size = Vector2(16.1453, 22.9351)

[node name="Enemy1" type="CharacterBody2D"]
scale = Vector2(6.03892, 4.88335)
collision_layer = 2
collision_mask = 7
script = ExtResource("1_3qghp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_8o0gs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.331185, 0)
scale = Vector2(1.59635, 0.0423831)
shape = SubResource("RectangleShape2D_py4il")

[node name="TimePeriod" type="Timer" parent="."]
wait_time = 0.06
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(-0.289788, 0)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_nsxty")

[node name="DamageTime" type="Timer" parent="."]
wait_time = 0.2

[node name="AnimatedSprite2D" parent="." instance=ExtResource("3_nj3h4")]

[connection signal="timeout" from="TimePeriod" to="." method="_on_time_period_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DamageTime" to="." method="_on_damage_time_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
